@@ -30,6 +30,7 @@ Project Leader / Developer:
 - Joe Esposito <joe@joeyespo.com>
 - Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>
 - immerrr <immerrr@gmail.com>
+- Cédric Krier
 
 Contributors of code for werkzeug/examples are:
 
